package Render;

message Mesh
{
    enum Primitive
    {
        TRIANGLES = 1;
        QUADS = 2;
    }

    required string    Name = 1;
    repeated float     Positions = 2;
    repeated float     Normals = 3;
    repeated float     Texcoord0 = 4;
    repeated uint32    Indices = 5;
    required uint32    PrimitiveCount = 6;
    required Primitive PrimitiveType = 7;
}
